force-app/main/default/objects/Theater_Area_Mapping__c/Theater_Area_Mapping__c.object-meta.xml
<CustomObject>
    <description>This object is basically used to populate the data for two fields Region__c, Area__c in Account object.These two fields depends on Account_Country_Code__c.</description>
    <label>Theater_Area_Mapping</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Theater_Area_Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>