force-app/main/default/objects/Theater_Area_Mapping__c/fields/Account_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Country_Code__c</fullName>
    <description>It holds the country code present in the Accounts.</description>
    <label>Account Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0A</fullName>
            </value>
            <value>
                <fullName>0C</fullName>
            </value>
            <value>
                <fullName>0D</fullName>
            </value>
            <value>
                <fullName>0E</fullName>
            </value>
            <value>
                <fullName>0F</fullName>
            </value>
            <value>
                <fullName>4V</fullName>
            </value>
            <value>
                <fullName>7W</fullName>
            </value>
            <value>
                <fullName>7X</fullName>
            </value>
            <value>
                <fullName>7Y</fullName>
            </value>
            <value>
                <fullName>7Z</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>AO</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BF</fullName>
            </value>
            <value>
                <fullName>BG</fullName>
            </value>
            <value>
                <fullName>BH</fullName>
            </value>
            <value>
                <fullName>BN</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>