force-app/main/default/objects/Theater_Area_Mapping__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADRIATICS</fullName>
            </value>
            <value>
                <fullName>AFRICA DIRECT</fullName>
            </value>
            <value>
                <fullName>ARGENTINA</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CENTRAL EUROPE</fullName>
            </value>
            <value>
                <fullName>CHILE PERU</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>CHINA FINANCIAL</fullName>
            </value>
            <value>
                <fullName>CHINA RETAIL</fullName>
            </value>
            <value>
                <fullName>COLOMBIA</fullName>
            </value>
            <value>
                <fullName>EMERGING</fullName>
            </value>
            <value>
                <fullName>FRANCE BELGIUM</fullName>
            </value>
            <value>
                <fullName>GC CHINA FINANCIAL</fullName>
            </value>
            <value>
                <fullName>GC CHINA RETAIL</fullName>
            </value>
            <value>
                <fullName>GLOBAL ACCTS</fullName>
            </value>
            <value>
                <fullName>GREATER CHINA</fullName>
            </value>
            <value>
                <fullName>GULF</fullName>
            </value>
            <value>
                <fullName>HK TAIWAN</fullName>
            </value>
            <value>
                <fullName>IBERIA</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>ITALY</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>KOREA</fullName>
            </value>
            <value>
                <fullName>MEA DISTRIBUTORS</fullName>
            </value>
            <value>
                <fullName>MEXICO</fullName>
            </value>
            <value>
                <fullName>NEAR EAST</fullName>
            </value>
            <value>
                <fullName>NORTHERN EUROPE</fullName>
            </value>
            <value>
                <fullName>PAKISTAN</fullName>
            </value>
            <value>
                <fullName>PR DR DIST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>