force-app/main/default/objects/Theater_Area_Mapping__c/fields/CDM_SMB_Flag__c.field-meta.xml
<CustomField>
    <fullName>CDM_SMB_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDM SMB Flag</label>
    <type>Checkbox</type>
</CustomField>