force-app/main/default/objects/Theater_Area_Mapping__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CROSS LOB</fullName>
            </value>
            <value>
                <fullName>FINANCIAL</fullName>
            </value>
            <value>
                <fullName>HOSPITALITY</fullName>
            </value>
            <value>
                <fullName>RETAIL</fullName>
            </value>
            <value>
                <fullName>T&amp;T</fullName>
            </value>
            <value>
                <fullName>TRAVEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>