force-app/main/default/objects/Theater_Area_Mapping__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>CLA</fullName>
            </value>
            <value>
                <fullName>EAST EUROPE</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>EUROPE EXC RUSSIA</fullName>
            </value>
            <value>
                <fullName>GLOBAL ACCTS</fullName>
            </value>
            <value>
                <fullName>GREATER CHINA</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>INDIA AND SEA</fullName>
            </value>
            <value>
                <fullName>JAPAN KOREA</fullName>
            </value>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>NAMER</fullName>
            </value>
            <value>
                <fullName>NORTH ASIA AND SPA</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>WEST EUROPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>