force-app/main/default/objects/Theater_Area_Mapping__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <label>Theater</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMEA</fullName>
            </value>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>GLOBAL ACCTS</fullName>
            </value>
            <value>
                <fullName>JAPAN KOREA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>